[project]
name = "Banking"
version = "0.1.0"
description = "A short description of my project."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests>=2.25",
    "pandas>=1.3",
    "sqlalchemy>=2.0",
]
